--- a/src/Components/categorias/Categorias.module.css
+++ b/src/Components/categorias/Categorias.module.css
@@ -14,7 +14,6 @@
   justify-content: center;
 }
 .slides img {
-  height: 125px;
   width: 125px;
   align-self: center;
   border-radius: 50%;
@@ -22,7 +21,7 @@
   border: 1px solid #e6e6e6;
 }
 .slides h3 {
-  width: 100px;
+  width: 125px;
   text-transform: uppercase;
   padding-bottom: 0.3125rem;
   font-family: Quicksand;
@@ -33,8 +32,13 @@
   letter-spacing: .015rem;
   text-align: center;
   color: #000;
-  padding-top: 8px;
+  padding-top: 16px;
   align-self: center;
+}
+
+.slides:hover.slides h3 {
+  border-bottom: 1px solid black;
+  width: max-content;
 }
 
 @media (max-width:64rem) {
@@ -58,6 +62,9 @@
 .slides img {
   height: 100px;
   width: 100px;
+}
+.slides h3 {
+  padding-top: 4px;
 }
 }
 
