--- a/src/Components/produtos/Produtos.module.css
+++ b/src/Components/produtos/Produtos.module.css
@@ -9,7 +9,7 @@
   margin-bottom: 64px !important;
 }
 .produtosContainer h3 {
-  padding-bottom: 32px;
+  margin-bottom: 32px;
 }
 
 .produtos {
@@ -37,15 +37,21 @@
   }
 
   .produtosContainer h3 {
-    padding-bottom: 16px;
+    margin-bottom: 16px;
   }
 }
 
 @media (max-width:40rem) {
+  .produtosContainer {
+    margin-top: 16px;
+  }
+  .produtosContainer h3{
+    margin-bottom: 8px;
+  }
 
   .produtos {
-    gap: 32px 16px;
-    padding: 0px 10px;
+    gap: 16px;
+    padding: 0 ;
     }
 
 }
